// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maps state and dispatch to props 1`] = `
Object {
  "active": false,
  "name": "Dohlášeni",
  "onClick": [Function],
}
`;

exports[`maps state and dispatch to props 2`] = `
Object {
  "active": true,
  "name": "Přihlášeni",
  "onClick": [Function],
}
`;

exports[`maps state and dispatch to props 3`] = `
Array [
  Object {
    "datum": 2018-05-12T00:00:00.000Z,
    "email": "zrala.kl@s.cz",
    "id": "7a09b1fd371dec1e99b7e142",
    "jmeno": "Hana",
    "kategorie": Object {
      "id": "5a587e1b051c181132cf83d9",
      "pohlavi": "žena",
      "typ": "půlmaraton",
      "vek": Object {
        "max": 39,
        "min": 18,
      },
    },
    "kod": "abc023skd204mvs345",
    "narozeni": Object {
      "den": 25,
      "mesic": 7,
      "rok": 1999,
    },
    "obec": "Bučovice",
    "predepsano": 200,
    "prijmeni": "Zralá",
    "startCislo": 10,
    "zaplaceno": 180,
  },
]
`;
